# qpick

./: .gitignore  Cargo.toml  Makefile  README.md  config.json
golang_service/: Makefile  README.md  main.go
golang_service/examples/: client.py
golang_service/lib/: goqpick.h
golang_service/lib/goqpick/: Cargo.toml
golang_service/lib/goqpick/src/: lib.rs
python_bindings/: README.md  build-wheels.sh  qpick_http_server.py  rust_setuptools.py  setup.py  test.py
python_bindings/qpickwrapper/: Cargo.toml
python_bindings/qpickwrapper/.cargo/: config
python_bindings/qpickwrapper/src/: lib.rs
python_bindings/rust_qpick/: __init__.py  _build_ffi.py  lib.py  qpick.py
qi-bin/: Cargo.toml
qi-bin/src/: main.rs
qi-bin/src/cmd/: get.rs
src/: builder.rs  config.rs  lib.rs  merge.rs  ngrams.rs  shard.rs  stopwords.rs  stringvec.rs  synonyms.rs  toponyms.rs  util.rs  word_vec.rs
