[package]
name = "qpick"
version = "0.2.0"
authors = ["Dragan Cvetinovic <dcvetinovic@gmail.com>"]

[[bin]]
name="qpick"
path="src/lib.rs"

[dependencies]
serde = "0.9.5"
serde_json = "0.9.3"
serde_derive = "1.0.8"
rand = "0.3.15"
byteorder = "0.5.3"
fst = "0.1.35"
seahash = "3.0.5"
libc = "0.2.36"
